<?xml version="1.0"?>
<package>
  <name>wait_action</name>
  <version>1.2.5</version>
  <description>The wait_action package implements an action to wait for a configurable length of time, or until woken.</description>

  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>


  <license>MIT</license>

  <author email="nickh@robots.ox.ac.uk">Nick Hawes</author>


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>